syntax = "proto3";

package bsr;

option go_package = "github.com/Piggey/bsr/packet";

enum GameMode {
  UNSPECIFIED = 0;
  PVP = 1;
  PVE = 2;
}

message CreateGamePacket {
  bytes magic = 1;
  uint32 version = 2;
  GameMode mode = 3;
}